generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  ADMIN
  STUDENT
}

model User {
  id               String             @id @default(uuid())
  name             String
  email            String             @unique
  passwordHash     String
  role             Role               @default(STUDENT)
  profilePictureUrl String?
  createdAt        DateTime           @default(now())
  updatedAt        DateTime           @updatedAt

  comments         Comment[]
  progress         Progress[]
  activityProgress ActivityProgress[]
}

model Course {
  id           String   @id @default(uuid())
  title        String
  description  String?
  thumbnailUrl String?
  isPublished  Boolean  @default(false)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  modules      Module[]
}

model Module {
  id          String   @id @default(uuid())
  title       String
  description String?
  order       Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  courseId  String
  course    Course   @relation(fields: [courseId], references: [id], onDelete: Cascade)
  lessons   Lesson[]
}

model Lesson {
  id              String   @id @default(uuid())
  title           String
  youtubeVideoId  String
  descriptionText String?
  stlFileUrl      String?
  pdfFileUrl      String?
  durationSeconds Int?
  order           Int
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  moduleId        String
  module          Module   @relation(fields: [moduleId], references: [id], onDelete: Cascade)
  activities      Activity[]
  comments        Comment[]
  progress        Progress[]
}

model Activity {
  id               String   @id @default(uuid())
  title            String
  description      String
  materials        Json?
  steps            String?
  circuitImageUrl  String?
  codeFileUrl      String?
  estimatedTimeMinutes Int?
  difficulty       String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  lessonId         String
  lesson           Lesson   @relation(fields: [lessonId], references: [id], onDelete: Cascade)
  activityProgress ActivityProgress[]
}

model Comment {
  id              String   @id @default(uuid())
  content         String
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  userId          String
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  lessonId        String
  lesson          Lesson   @relation(fields: [lessonId], references: [id], onDelete: Cascade)

  // Auto-relacionamento para respostas
  parentCommentId String?
  parentComment   Comment?  @relation("CommentReplies", fields: [parentCommentId], references: [id])
  replies         Comment[] @relation("CommentReplies")
}

model Progress {
  id             String   @id @default(uuid())
  watchedSeconds Int      @default(0)
  isCompleted    Boolean  @default(false)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  userId         String
  user           User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  lessonId       String
  lesson         Lesson   @relation(fields: [lessonId], references: [id], onDelete: Cascade)
}

model ActivityProgress {
  id          String    @id @default(uuid())
  isCompleted Boolean   @default(false)
  completedAt DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  userId      String
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  activityId  String
  activity    Activity  @relation(fields: [activityId], references: [id], onDelete: Cascade)
}